--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,7 +25,9 @@
           font-size: 3.5rem;
         }
       }
-
+        #topo{
+           margin-left: 550px;
+        }
     </style>
 
     <!-- Custom styles for this template -->
@@ -33,11 +35,14 @@
 
 </head>
 <body>
-    <header style="height: 80px;"
-            class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-      <p style="margin-left: 550px;;" class="h5 my-0 me-md-auto fw-normal">Cadastro de Produtos</p>
+    <header style="height: 80px; color: white; background-color: blue;" class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 border-bottom shadow-sm">
+        <a id='topo' style="text-decoration: none; color: white;" href="{{ url_for('index') }}">
+        <p class="h5 my-0 me-md-auto fw-normal">Cadastro de Produtos</p>
+        </a>
     </header>
     {% block content %}
     {% endblock %}
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
 </html>
